fix meta.yml for fastatoelfasta

--- a/modules/nf-core/elprep/fastatoelfasta/meta.yml
+++ b/modules/nf-core/elprep/fastatoelfasta/meta.yml
@@ -42,8 +42,15 @@ output:
             e.g. `[ id:'sample1', single_end:false ]`
           pattern: "*.elfasta"
   - log:
-      - meta: {}
-      - logs/elprep/elprep*: {}
+      - meta:
+          type: map
+          description: |
+            Groovy Map containing sample information
+            e.g. `[ id:'sample1', single_end:false ]`
+      - logs/elprep/elprep*:
+          type: file
+          description: ELFasta log file
+          pattern: "*.log"
   - versions:
       - versions.yml:
           type: file
