--- a/modules/nf-core/sourcepredict/meta.yml
+++ b/modules/nf-core/sourcepredict/meta.yml
@@ -11,7 +11,7 @@ tools:
       documentation: "https://sourcepredict.readthedocs.io/en/latest/index.html"
       tool_dev_url: "https://github.com/maxibor/sourcepredict"
       doi: "10.21105/joss.01540"
-      licence: ['GPL v3-or-later']
+      licence: ["GPL v3-or-later"]
       identifier: biotools:sourcepredict
 
 input:
