--- a/modules/nf-core/limma/differential/meta.yml
+++ b/modules/nf-core/limma/differential/meta.yml
@@ -99,8 +99,14 @@ output:
           description: dump of R SessionInfo
           pattern: "*.log"
   - normalised_counts:
-      - meta: {}
-      - "*.normalised_counts.tsv": {}
+      - meta:
+          type: file
+          description: normalised TSV format expression matrix with probes by row and samples by column
+          pattern: "*.normalised_counts.tsv"
+      - "*.normalised_counts.tsv":
+          type: file
+          description: normalised TSV format expression matrix with probes by row and samples by column
+          pattern: "*.normalised_counts.tsv"
   - versions:
       - versions.yml:
           type: file
