Rename viz_polygon parameter

--- a/modules/nf-core/xeniumranger/import-segmentation/meta.yml
+++ b/modules/nf-core/xeniumranger/import-segmentation/meta.yml
@@ -57,7 +57,7 @@ input:
         type: file
         description: |
           Transcript CSV with cell assignment from Baysor v0.6. Error if --cells or --nuclei arguments are used.
-  - - cell_boundary_polygons:
+  - - viz_polygons:
         type: file
         description: |
           Cell boundary polygons (GeoJSON) for visualization from Baysor v0.6. Required if --transcript-assignment argument used. Error if --cells or --nuclei arguments used.
