update to 1.0.4 errors in test still exist

--- a/modules/nf-core/crabs/insilicopcr/tests/nextflow.config
+++ b/modules/nf-core/crabs/insilicopcr/tests/nextflow.config
@@ -1,7 +1,7 @@
 process {
 
     withName: CRABS_INSILICOPCR {
-        ext.args = '--fwd "GTCGGTAAAACTCGTGCCAGC" --rev "CATAGTGGGGTATCTAATCCCAGTTTG" --error 4.5'
+        ext.args = '--forward "GTCGGTAAAACTCGTGCCAGC" --reverse "CATAGTGGGGTATCTAATCCCAGTTTG"'
     }
 
 }
