use single config for tests

--- a/modules/nf-core/bismark/align/tests/nextflow.config
+++ b/modules/nf-core/bismark/align/tests/nextflow.config
@@ -1,8 +1,8 @@
 process {
     withName: BISMARK_ALIGN {
-        ext.args = '--hisat2'
+        ext.args = params.bismark_args
     }
     withName: BISMARK_GENOMEPREPARATION {
-        ext.args = '--hisat2'
+        ext.args = params.bismark_args
     }
 }
