--- a/modules/nf-core/hiphase/meta.yml
+++ b/modules/nf-core/hiphase/meta.yml
@@ -1,7 +1,6 @@
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/modules/meta-schema.json
 name: "hiphase"
-## TODO nf-core: Add a description of the module and list keywords
 description: write your description here
 keywords:
   - sort
@@ -9,59 +8,68 @@ keywords:
   - genomics
 tools:
   - "hiphase":
-      ## TODO nf-core: Add a description and other details for the software below
       description: "Small and structural variant phasing tool for PacBio HiFi reads"
-      homepage: "None"
-      documentation: "None"
-      tool_dev_url: "None"
-      doi: ""
-      licence: ['BSD-3-clause-Clear']
+      homepage: "https://github.com/PacificBiosciences/HiPhase"
+      documentation: "https://github.com/PacificBiosciences/HiPhase"
+      tool_dev_url: "https://github.com/PacificBiosciences/HiPhase"
+      doi: "10.1234/placeholder.doi"
+      licence: ["BSD-3-clause-Clear"]
       identifier: biotools:hiphase
-
-## TODO nf-core: Add a description of all of the variables used as input
 input:
-  # Only when we have meta
   - - meta:
         type: map
         description: |
           Groovy Map containing sample information
           e.g. `[ id:'sample1', single_end:false ]`
-  
-  ## TODO nf-core: Delete / customise this example input
     - bam:
         type: file
         description: Sorted BAM/CRAM/SAM file
-        pattern: "*.{bam,cram,sam}"
-        ontologies:
-          - edam: "http://edamontology.org/format_25722"
-          - edam: "http://edamontology.org/format_2573"
-          - edam: "http://edamontology.org/format_3462"
-          
-
-## TODO nf-core: Add a description of all of the variables used as output
-output:
-  - bam:
-  #Only when we have meta
-    - meta:
+        pattern: "*.{bam}"
+  - - meta2:
         type: map
         description: |
           Groovy Map containing sample information
           e.g. `[ id:'sample1', single_end:false ]`
-  ## TODO nf-core: Delete / customise this example output
-    - "*.bam":
+    - vcf:
         type: file
-        description: Sorted BAM/CRAM/SAM file
-        pattern: "*.{bam,cram,sam}"
-        ontologies:
-          - edam: "http://edamontology.org/format_25722"
-          - edam: "http://edamontology.org/format_2573"
-          - edam: "http://edamontology.org/format_3462"
-          
+        description: VCF File
+        pattern: "*.{vcf}"
+  - - meta3:
+        type: map
+        description: |
+          Groovy Map containing sample information
+          e.g. `[ id:'sample1', single_end:false ]`
+    - fasta:
+        type: file
+        description: FASTA File (used for the alignment of the BAM file)
+        pattern: "*.{fasta}"
+output:
+  - vcf:
+      - meta:
+          type: map
+          description: |
+            Groovy Map containing sample information
+            e.g. `[ id:'sample1', single_end:false ]`
+      - "*.vcf":
+          type: file
+          description: Phased VCF file
+          pattern: "*.vcf"
+  - bam:
+      - meta:
+          type: map
+          description: |
+            Groovy Map containing sample information
+            e.g. `[ id:'sample1', single_end:false ]`
+      - "*.bam":
+          type: file
+          description: Haplo-tagged BAM files
+          pattern: "*.bam"
+
   - versions:
-    - "versions.yml":
-        type: file
-        description: File containing software versions
-        pattern: "versions.yml"
+      - "versions.yml":
+          type: file
+          description: File containing software versions
+          pattern: "versions.yml"
 
 authors:
   - "@tanyasarkjain"
