--- a/modules/nf-core/hiphase/meta.yml
+++ b/modules/nf-core/hiphase/meta.yml
@@ -29,7 +29,7 @@ input:
         description: |
           Groovy Map containing sample information
           e.g. `[ id:'sample1', single_end:false ]`
-    - index:
+    - csi:
         type: file
         description: CSI File associated with VCF
         pattern: "*.{csi}"
