--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -639,6 +639,12 @@ jobs:
           - profile: conda
             path: modules/nf-core/scimap/mcmicro
           - profile: conda
+            path: modules/nf-core/parabricks/fq2bammeth
+          - profile: docker_self_hosted
+            path: modules/nf-core/parabricks/fq2bammeth
+          - profile: singularity
+            path: modules/nf-core/parabricks/fq2bammeth
+          - profile: conda
             path: subworkflows/nf-core/vcf_annotate_ensemblvep
           - profile: conda
             path: subworkflows/nf-core/bcl_demultiplex
