--- a/modules/nf-core/cellbender/removebackground/environment.yml
+++ b/modules/nf-core/cellbender/removebackground/environment.yml
@@ -1,5 +1,8 @@
+name: cellbender_removebackground
 channels:
   - conda-forge
   - bioconda
+  - defaults
 dependencies:
-  - bioconda::cellbender=0.3.0
+  - bioconda::cellbender=0.3.2
+  - conda-forge::webcolors=1.13
