--- a/modules/nf-core/minimap2/align/meta.yml
+++ b/modules/nf-core/minimap2/align/meta.yml
@@ -35,56 +35,49 @@ input:
         type: file
         description: |
           Reference database in FASTA format.
-  - - bam_format:
-        type: boolean
-        description: Specify that output should be in BAM format
-  - - bam_index_extension:
-        type: string
-        description: BAM alignment index extension (e.g. "bai")
-  - - cigar_paf_format:
-        type: boolean
-        description: Specify that output CIGAR should be in PAF format
-  - - cigar_bam:
-        type: boolean
-        description: |
-          Write CIGAR with >65535 ops at the CG tag. This is recommended when
-          doing XYZ (https://github.com/lh3/minimap2#working-with-65535-cigar-operations)
+  - bam_format:
+      type: boolean
+      description: Specify that output should be in BAM format
+  - bam_index_extension:
+      type: string
+      description: BAM alignment index extension (e.g. "bai")
+  - cigar_paf_format:
+      type: boolean
+      description: Specify that output CIGAR should be in PAF format
+  - cigar_bam:
+      type: boolean
+      description: |
+        Write CIGAR with >65535 ops at the CG tag. This is recommended when
+        doing XYZ (https://github.com/lh3/minimap2#working-with-65535-cigar-operations)
 output:
   - paf:
-      - meta:
-          type: map
-          description: |
-            Groovy Map containing sample information
-            e.g. [ id:'test', single_end:false ]
-      - "*.paf":
-          type: file
-          description: Alignment in PAF format
-          pattern: "*.paf"
+      - type: map
+        description: |
+          Groovy Map containing sample information
+          e.g. [ id:'test', single_end:false ]
+      - type: file
+        description: Alignment in PAF format
+        pattern: "*.paf"
   - bam:
-      - meta:
-          type: map
-          description: |
-            Groovy Map containing sample information
-            e.g. [ id:'test', single_end:false ]
-      - "*.bam":
-          type: file
-          description: Alignment in BAM format
-          pattern: "*.bam"
+      - type: map
+        description: |
+          Groovy Map containing sample information
+          e.g. [ id:'test', single_end:false ]
+      - type: file
+        description: Alignment in BAM format
+        pattern: "*.bam"
   - index:
-      - meta:
-          type: map
-          description: |
-            Groovy Map containing sample information
-            e.g. [ id:'test', single_end:false ]
-      - "*.bam.${bam_index_extension}":
-          type: file
-          description: BAM alignment index
-          pattern: "*.bam.*"
+      - type: map
+        description: |
+          Groovy Map containing sample information
+          e.g. [ id:'test', single_end:false ]
+      - type: file
+        description: BAM alignment index
+        pattern: "*.bam.*"
   - versions:
-      - versions.yml:
-          type: file
-          description: File containing software versions
-          pattern: "versions.yml"
+      type: file
+      description: File containing software versions
+      pattern: "versions.yml"
 authors:
   - "@heuermh"
   - "@sofstam"
