--- a/modules/nf-core/minimap2/align/meta.yml
+++ b/modules/nf-core/minimap2/align/meta.yml
@@ -17,16 +17,16 @@ tools:
       identifier: ""
 input:
   - 0:
-    - meta:
-        type: map
-        description: |
-          Groovy Map containing sample information
-          e.g. [ id:'test', single_end:false ]
-    - reads:
-        type: file
-        description: |
-          List of input FASTA or FASTQ files of size 1 and 2 for single-end
-          and paired-end data, respectively.
+    - name: meta
+      type: map
+      description: |
+        Groovy Map containing sample information
+        e.g. [ id:'test', single_end:false ]
+    - name: reads
+      type: file
+      description: |
+        List of input FASTA or FASTQ files of size 1 and 2 for single-end
+        and paired-end data, respectively.
   - 1:
     - name: meta2
       type: map
