--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -256,6 +256,8 @@ jobs:
             tags: subworkflows/fasta_clean_fcs
           - profile: "conda"
             tags: islandpath
+          - profile: "conda"
+            tags: parabricks
     env:
       NXF_ANSI_LOG: false
       SENTIEON_LICENSE_BASE64: ${{ secrets.SENTIEON_LICENSE_BASE64 }}
