Fix stimulus/checktorchmodel structure and add nf-test

--- a/modules/nf-core/stimulus/checktorchmodel/environment.yml
+++ b/modules/nf-core/stimulus/checktorchmodel/environment.yml
@@ -13,5 +13,6 @@ dependencies:
   - ray
   - safetensors
   - scikit-learn
+  # NOTE https://github.com/nf-core/modules/issues/5814
   - pip:
       - stimulus-py 
