parabricks/applybqsr version updated and tests migrated to pytest

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -443,6 +443,8 @@ jobs:
             tags: universc
           - profile: "conda"
             tags: subworkflows/vcf_annotate_ensemblvep
+          - profile: "conda"
+            tags: parabricks/applybqsr
     env:
       NXF_ANSI_LOG: false
       SENTIEON_LICENSE_BASE64: ${{ secrets.SENTIEON_LICENSE_BASE64 }}
