add -defaults back to channels:

--- a/modules/nf-core/cellbender/removebackground/environment.yml
+++ b/modules/nf-core/cellbender/removebackground/environment.yml
@@ -1,6 +1,7 @@
 channels:
   - conda-forge
   - bioconda
+  - defaults
 dependencies:
   - bioconda::cellbender=0.3.2
   - conda-forge::webcolors=1.13
