--- a/modules/nf-core/stimulus/transform/meta.yml
+++ b/modules/nf-core/stimulus/transform/meta.yml
@@ -12,14 +12,14 @@ tools:
       documentation: "https://github.com/mathysgrapotte/stimulus-py"
       tool_dev_url: "https://github.com/mathysgrapotte/stimulus-py"
       doi: ""
-      licence: "MIT"
+      licence: ["MIT"]
 
 input:
   - - meta:
-      type: map
-      description: |
-        Groovy Map containing sample information
-        e.g. `[ id:'sample1' ]`
+        type: map
+        description: |
+          Groovy Map containing sample information
+          e.g. `[ id:'sample1' ]`
     
     - transform_json:
         type: file
@@ -31,21 +31,22 @@ input:
         description: Csv file to be transformed
         pattern: "*.csv"
 output:
-  - meta:
-      type: map
-      description: |
-        Groovy Map containing sample information
-        e.g. `[ id:'sample1', single_end:false ]`
-  
-  - versions:
-      type: file
-      description: File containing software versions
-      pattern: "versions.yml"
-
   - csv:
-      type: file
-      description: CSV file with the transformed data
-      pattern: "*.csv"
+    - meta:
+        type: map
+        description: |
+          Groovy Map containing sample information
+          e.g. `[ id:'sample1', single_end:false ]`
+    - csv:
+        type: file
+        description: CSV file with the transformed data
+        pattern: "*.csv"
+
+  - versions:
+    - versions.yml:
+        type: file
+        description: File containing software versions
+        pattern: "versions.yml"
 
 authors:
   - "@luisas"
