--- a/modules/nf-core/metamdbg/asm/meta.yml
+++ b/modules/nf-core/metamdbg/asm/meta.yml
@@ -1,6 +1,5 @@
----
 # yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/modules/meta-schema.json
-name: "metaMDBG assembly"
+name: "METAMDBG_ASM"
 description: Metagenome assembler for long-read sequences (HiFi and ONT).
 keywords:
   - assembly
@@ -9,7 +8,8 @@ keywords:
   - metagenome assembler
 tools:
   - "metamdbg":
-      description: "MetaMDBG: a lightweight assembler for long and accurate metagenomics reads."
+      description: "MetaMDBG: a lightweight assembler for long and accurate metagenomics
+        reads."
       homepage: "https://github.com/GaetanBenoitDev/metaMDBG"
       documentation: "https://github.com/GaetanBenoitDev/metaMDBG"
       tool_dev_url: "https://github.com/GaetanBenoitDev/metaMDBG"
@@ -26,12 +26,14 @@ input:
 
     - reads:
         type: file
-        description: Long read sequence data from ONT or HiFi in fasta format (can be gzipped)
+        description: Long read sequence data from ONT or HiFi in fasta format (can be
+          gzipped)
         pattern: "*.{fa,fasta,fa.gz,fasta.gz}"
 
   - - input_type:
         type: string
-        description: Sequencing technology for reads - either "hifi" for PacBio HiFi reads or "ont" for Oxford Nanopore reads.
+        description: Sequencing technology for reads - either "hifi" for PacBio HiFi
+          reads or "ont" for Oxford Nanopore reads.
 
 output:
   - contigs:
@@ -42,8 +44,9 @@ output:
             e.g. `[ id:'sample1', single_end:false ]`
       - "contigs.fasta.gz":
           type: file
-          description: Gzipped fasta file containing the assembled contigs from the input reads.
-
+          description: |
+            Gzipped fasta file containing the assembled contigs from the input
+            reads.
   - log:
       - meta:
           type: map
@@ -53,13 +56,11 @@ output:
       - "metaMDBG.log":
           type: file
           description: Log file describing the metaMDBG run.
-
   - versions:
-      - "versions.yml":
+      - versions.yml:
           type: file
           description: File containing software versions
           pattern: "versions.yml"
-
 authors:
   - "@prototaxites"
 maintainers:
