--- a/modules/nf-core/stimulus/transform/meta.yml
+++ b/modules/nf-core/stimulus/transform/meta.yml
@@ -1,4 +1,3 @@
----
 name: "stimulus_transform"
 description: Use stimulus-py package to transform the data.
 keywords:
@@ -12,6 +11,7 @@ tools:
       documentation: "https://github.com/mathysgrapotte/stimulus-py"
       tool_dev_url: "https://github.com/mathysgrapotte/stimulus-py"
       licence: ["MIT"]
+      identifier: ""
 
 input:
   - - meta:
@@ -21,31 +21,32 @@ input:
           e.g. `[ id:'sample1' ]`
     - transform_json:
         type: file
-        description: Json file with the transformation instructions
-        pattern: "*.json"
-
+        description: |
+          Json file with the transformation instructions
+        pattern: ".json"
   - - csv:
         type: file
-        description: Csv file to be transformed
-        pattern: "*.csv"
+        description: |
+          Csv file to be transformed
+        pattern: ".csv"
 output:
   - csv:
       - meta:
           type: map
           description: |
             Groovy Map containing sample information
-            e.g. `[ id:'sample1', single_end:false ]`
-      - csv:
+            e.g. `[ id:'sample1' ]`
+      - "${prefix}.csv":
           type: file
-          description: CSV file with the transformed data
-          pattern: "*.csv"
-
+          description: |
+            Transformed CSV file
+          pattern: ".csv"
   - versions:
       - versions.yml:
           type: file
-          description: File containing software versions
+          description: |
+            File containing software versions
           pattern: "versions.yml"
-
 authors:
   - "@luisas"
 maintainers:
