--- a/modules/nf-core/stimulus/transform/meta.yml
+++ b/modules/nf-core/stimulus/transform/meta.yml
@@ -1,18 +1,16 @@
 name: "stimulus_transform"
 description: Use stimulus-py package to transform the data.
 keywords:
-  - deeplearning
-  - noise
-  - preprocessing
+  - machine learning
+  - neural network
+  - unit test
 tools:
   - "stimulus":
-      description: "Python package for processing deep learning models"
+      description: "Stochastic Testing and Input Manipulation for Unbiased Learning Systems"
       homepage: "https://github.com/mathysgrapotte/stimulus-py"
       documentation: "https://github.com/mathysgrapotte/stimulus-py"
       tool_dev_url: "https://github.com/mathysgrapotte/stimulus-py"
       licence: ["MIT"]
-      identifier: ""
-
 input:
   - - meta:
         type: map
