--- a/modules/nf-core/stimulus/splitcsv/meta.yml
+++ b/modules/nf-core/stimulus/splitcsv/meta.yml
@@ -1,56 +1,52 @@
----
 name: "stimulus_splitcsv"
 description: Split the data.
 keywords:
-  - data analysis
+  - machine learning
+  - neural network
+  - unit test
 tools:
   - "stimulus":
-      ## TODO nf-core: Add a description and other details for the software below
-      description: ""
-      homepage: ""
-      documentation: ""
-      tool_dev_url: ""
-      doi: ""
-      licence:
-      identifier:
-
+      description: "Stochastic Testing and Input Manipulation for Unbiased Learning\
+        \ Systems"
+      homepage: "https://github.com/mathysgrapotte/stimulus-py"
+      documentation: "https://github.com/mathysgrapotte/stimulus-py"
+      tool_dev_url: "https://github.com/mathysgrapotte/stimulus-py"
+      licence: ["MIT"]
+      identifier: ""
 input:
   - - meta:
         type: map
         description: |
           Groovy Map containing sample information
           e.g. `[ id:'sample1' ]`
-
     - split_json:
         type: file
         description: json file with the data split configuration
         pattern: "*.json"
-
-  - data_csv:
+  - - data_csv:
         type: file
         description: csv file with the data for training the models
         pattern: "*.csv"
 
-
 output:
   - split_csv:
-    - meta:
-        type: map
-        description: |
-          Groovy Map containing sample information
-          e.g. `[ id:'sample1', single_end:false ]`
-    - "*.csv":
-        type: file
-        description: csv file splitted with stimulus
-        pattern: "*.csv"
-
-
+      - meta:
+          type: map
+          description: |
+            Groovy Map containing sample information
+            e.g. `[ id:'sample1', single_end:false ]`
+          pattern: "*.csv"
+      - ${prefix}.csv:
+          type: map
+          description: |
+            Groovy Map containing sample information
+            e.g. `[ id:'sample1', single_end:false ]`
+          pattern: "*.csv"
   - versions:
-    - "versions.yml":
-        type: file
-        description: File containing software versions
-        pattern: "versions.yml"
-
+      - versions.yml:
+          type: file
+          description: File containing software versions
+          pattern: "versions.yml"
 authors:
   - "@yocra3"
 maintainers:
