--- a/modules/nf-core/stimulus/analysisdefault/meta.yml
+++ b/modules/nf-core/stimulus/analysisdefault/meta.yml
@@ -1,62 +1,62 @@
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/modules/meta-schema.json
 name: "stimulus_analysisdefault"
-## DONE nf-core: Add a description of the module and list keywords
 description: Model robustness analysis and reporting from the stimulus package.
 keywords:
-  - reporting
   - machine learning
-  - hyperparameters
-  - optimisation
+  - neural network
+  - unit test
 tools:
   - "stimulus":
-      ## DONE nf-core: Add a description and other details for the software below
-      description: "Python package for processing deep learning models"
+      description: "Stochastic Testing and Input Manipulation for Unbiased Learning Systems"
       homepage: "https://github.com/mathysgrapotte/stimulus-py"
       documentation: "https://github.com/mathysgrapotte/stimulus-py"
       tool_dev_url: "https://github.com/mathysgrapotte/stimulus-py"
-      doi: ""
-      licence: ["MIT License"]
-      identifier: ""
+      licence: ["MIT"]
 
-## TODO nf-core: Add a description of all of the variables used as input
 input:
-  # Only when we have meta
+  - - model:
+        type: file
+        description: "The model .py file."
+        pattern: "*.py"
+  - - weights:
+        type: file
+        description: "Model weights .pt file."
+        pattern: "*.pt"
+  - - metrics:
+        type: file
+        description: "The file path for the metrics file obtained during tuning."
   - - meta:
         type: map
         description: |
           Groovy Map containing sample information
           e.g. `[ id:'sample1', single_end:false ]`
-  
-  ## TODO nf-core: Delete / customise this example input
-    - bam:
+    - experiment_config:
         type: file
-        description: Sorted BAM/CRAM/SAM file
-        pattern: "*.{bam,cram,sam}"
-        ontologies:
-          - edam: "http://edamontology.org/format_25722"
-          - edam: "http://edamontology.org/format_2573"
-          - edam: "http://edamontology.org/format_3462"
-          
+        description: "The experiment config used to modify the data."
+        pattern: "*.yml"
+  - - model_config:
+        type: file
+        description: "The tune config file."
+        pattern: "*.yml"
+  - - data:
+        type: file
+        description: "List of data files to be used for the analysis."
 
 ## TODO nf-core: Add a description of all of the variables used as output
-output:
-  - bam:
-  #Only when we have meta
+output:        
+  - analysis:
     - meta:
         type: map
         description: |
           Groovy Map containing sample information
           e.g. `[ id:'sample1', single_end:false ]`
-  ## TODO nf-core: Delete / customise this example output
-    - "*.bam":
-        type: file
-        description: Sorted BAM/CRAM/SAM file
-        pattern: "*.{bam,cram,sam}"
-        ontologies:
-          - edam: "http://edamontology.org/format_25722"
-          - edam: "http://edamontology.org/format_2573"
-          - edam: "http://edamontology.org/format_3462"
+    - "performance_tune_train/":
+        type: directory
+        description: "Output directory with images detailing performance during tuning/training."
+    - "performance_robustness/":
+        type: directory
+        description: "Output directory with images detailing model robustness."
           
   - versions:
     - "versions.yml":
