--- a/modules/nf-core/scvitools/scar/meta.yml
+++ b/modules/nf-core/scvitools/scar/meta.yml
@@ -16,28 +16,35 @@ tools:
       tool_dev_url: https://github.com/Novartis/scar
       licence: ["Novartis Terms of License"]
 input:
-  - meta:
-      type: map
-      description: |
-        Groovy Map containing sample information
-        e.g. [ id:'test' ]
-  - filtered:
-      type: file
-      description: AnnData file containing filtered data (without empty droplets)
-      pattern: "*.h5ad"
-  - unfiltered:
-      type: file
-      description: AnnData file containing unfiltered data (with empty droplets)
-      pattern: "*.h5ad"
+  - - meta:
+        type: map
+        description: |
+          Groovy Map containing sample information
+          e.g. [ id:'test' ]
+    - filtered:
+        type: file
+        description: AnnData file containing filtered data (without empty droplets)
+        pattern: "*.h5ad"
+    - unfiltered:
+        type: file
+        description: AnnData file containing unfiltered data (with empty droplets)
+        pattern: "*.h5ad"
 output:
   - h5ad:
-      type: file
-      description: AnnData file containing decontaminated counts as `adata.X`
-      pattern: "*.h5ad"
+    - meta:
+        type: map
+        description: |
+          Groovy Map containing sample information
+          e.g. [ id:'test' ]
+    - '*.h5ad':
+        type: file
+        description: AnnData file containing decontaminated counts as `adata.X`
+        pattern: "*.h5ad"
   - versions:
-      type: file
-      description: File containing software version
-      pattern: "versions.yml"
+    - versions.yml:
+        type: file
+        description: File containing software version
+        pattern: "versions.yml"
 authors:
   - "@nictru"
 maintainers:
