--- a/modules/nf-core/stimulus/checktorchmodel/environment.yml
+++ b/modules/nf-core/stimulus/checktorchmodel/environment.yml
@@ -1,17 +1,13 @@
----
-# yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/modules/environment-schema.json
 channels:
   - conda-forge
   - bioconda
+
 dependencies:
-  - python=3.12
-  - pytorch
-  - matplotlib
-  - pandas
-  - polars
-  - ray
-  - safetensors
-  - scikit-learn
-  # NOTE https://github.com/nf-core/modules/issues/5814
-  - pip:
-      - stimulus-py 
+  - conda-forge::matplotlib=3.9.2
+  - conda-forge::pandas=2.2.3
+  - conda-forge::polars=1.9.0
+  - conda-forge::python=3.12
+  - conda-forge::pytorch=2.4.1
+  - conda-forge::ray-core=2.37.0
+  - conda-forge::safetensors=0.4.5
+  - conda-forge::scikit-learn=1.5.2
