Exclude Conda from tests

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -654,6 +654,8 @@ jobs:
             path: subworkflows/nf-core/fastq_align_bamcmp_bwa
           - profile: conda
             path: subworkflows/nf-core/fastq_align_bwa
+          - profile: conda
+            path: subworkflows/nf-core/fasta_newick_epang_gappa
     env:
       NXF_ANSI_LOG: false
       NFTEST_VER: "0.9.0"
