--- a/modules/nf-core/parabricks/fq2bam/tests/nextflow.config
+++ b/modules/nf-core/parabricks/fq2bam/tests/nextflow.config
@@ -1,5 +1,8 @@
 process {
 
+    withName: PARABRICKS {
+        ext.args = "--low-memory"
+    }
     withName: PARABRICKS_FQ2BAM_MKDUP_NOQC {
         ext.args = "--out-duplicate-metrics duplicate-metrics.txt"
     }
