--- a/modules/nf-core/parabricks/fq2bam/tests/nextflow.config
+++ b/modules/nf-core/parabricks/fq2bam/tests/nextflow.config
@@ -1,6 +1,6 @@
 process {
 
-    withName: PARABRICKS {
+    withName: PARABRICKS_FQ2BAM {
         ext.args = "--low-memory"
     }
     withName: PARABRICKS_FQ2BAM_MKDUP_NOQC {
