license name change

--- a/modules/nf-core/hiphase/meta.yml
+++ b/modules/nf-core/hiphase/meta.yml
@@ -12,7 +12,7 @@ tools:
       documentation: "https://github.com/PacificBiosciences/HiPhase"
       tool_dev_url: "https://github.com/PacificBiosciences/HiPhase"
       doi: "10.1234/placeholder.doi"
-      licence: ["BSD-3-clause-Clear"]
+      licence: ["Pacific Biosciences Software License Agreement"]
       identifier: biotools:hiphase
 input:
   - - meta:
