--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -645,6 +645,12 @@ jobs:
           - profile: singularity
             path: modules/nf-core/parabricks/fq2bammeth
           - profile: conda
+            path: modules/nf-core/parabricks/fq2bam
+          - profile: docker_self_hosted
+            path: modules/nf-core/parabricks/fq2bam
+          - profile: singularity
+            path: modules/nf-core/parabricks/fq2bam
+          - profile: conda
             path: subworkflows/nf-core/vcf_annotate_ensemblvep
           - profile: conda
             path: subworkflows/nf-core/bcl_demultiplex
