--- a/modules/nf-core/shigapass/meta.yml
+++ b/modules/nf-core/shigapass/meta.yml
@@ -12,7 +12,7 @@ tools:
       tool_dev_url: https://github.com/imanyass/ShigaPass
       licence: ["GPL v3"]
 input:
-  - meta:
+  - - meta:
       type: map
       description: |
         Groovy Map containing sample information
