added doubletdetection via bioconda

--- a/modules/nf-core/doubletdetection/environment.yml
+++ b/modules/nf-core/doubletdetection/environment.yml
@@ -4,6 +4,4 @@ channels:
 dependencies:
   - conda-forge::anndata=0.10.7
   - conda-forge::louvain=0.8.2
-  - pip
-  - pip:
-      - doubletdetection==4.2
+  - bioconda::doubletdetection=4.2
