--- a/modules/nf-core/stimulus/analysisdefault/meta.yml
+++ b/modules/nf-core/stimulus/analysisdefault/meta.yml
@@ -31,7 +31,7 @@ input:
     - model_config:
         type: file
         description: "The tune config file."
-        pattern: "*.json"
+        pattern: "*.yaml"
     - weights:
         type: file
         description: "Model weights .pt file."
