--- a/modules/nf-core/parabricks/fq2bam/meta.yml
+++ b/modules/nf-core/parabricks/fq2bam/meta.yml
@@ -44,7 +44,7 @@ input:
         type: map
         description: |
           Groovy Map containing index information
-  - - interval_file:
+    - interval_file:
         type: file
         description: (optional) file(s) containing genomic intervals for use in base
           quality score recalibration (BQSR)
