--- a/modules/nf-core/parabricks/fq2bam/meta.yml
+++ b/modules/nf-core/parabricks/fq2bam/meta.yml
@@ -40,7 +40,11 @@ input:
         type: file
         description: reference BWA index
         pattern: "*.{amb,ann,bwt,pac,sa}"
-  - - interval_file:
+  - - meta4:
+        type: map
+        description: |
+          Groovy Map containing index information
+    - interval_file:
         type: file
         description: (optional) file(s) containing genomic intervals for use in base
           quality score recalibration (BQSR)
@@ -71,6 +75,17 @@ output:
           type: file
           description: index corresponding to sorted BAM file
           pattern: "*.bai"
+  - bqsr_table:
+      - meta:
+          type: map
+          description: |
+            Groovy Map containing sample information
+            e.g. [ id:'test']
+      - "*.table":
+          type: file
+          description: (optional) table from base quality score recalibration calculation,
+            to be used with parabricks/applybqsr
+          pattern: "*.table"
   - versions:
       - versions.yml:
           type: file
@@ -81,12 +96,6 @@ output:
           type: directory
           description: (optional) optional directory of qc metrics
           pattern: "qc_metrics"
-  - bqsr_table:
-      - "*.table":
-          type: file
-          description: (optional) table from base quality score recalibration calculation,
-            to be used with parabricks/applybqsr
-          pattern: "*.table"
   - duplicate_metrics:
       - duplicate-metrics.txt:
           type: file
